--- a/config/tsd.config.json
+++ b/config/tsd.config.json
@@ -37,6 +37,9 @@
     },
     "angular-protractor/angular-protractor.d.ts": {
       "commit": "6f04d25ad38982d372cc3cda62fa4c0eef9e24d7"
+    },
+    "angular-translate/angular-translate.d.ts": {
+      "commit": "ab3cc82066805007cbf0db233ddb5879f42be4d2"
     }
   }
 }
