--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,8 @@
     "angular-messages": "~1.4.1",
     "angular-material": "~0.10.0",
     "angular-touch": "~1.4.1",
-    "angular": "~1.4.1"
+    "angular": "~1.4.1",
+    "almond": "~0.3.1"
   },
   "devDependencies": {}
 }
