Fixed file list widget, except for correct style; updated build process to use text plugin

--- a/config/grunt.config.json
+++ b/config/grunt.config.json
@@ -94,8 +94,17 @@
   },
   "copy": {
     "bootstrap": {
-      "src": "./src/bootstrap/paths.js",
-      "dest": "./build/paths.js"
+      "files": [{
+        "cwd": "./src/bootstrap",
+        "src": "*.js",
+        "dest": "./build/",
+        "expand": true
+      }, {
+        "cwd": "./src/icons",
+        "src": "**",
+        "dest": "./build/icons/",
+        "expand": true
+      }]
     }
   },
   "clean": {
