--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-tsd": "^0.1.0",
     "grunt-umd": "^2.3.3",
     "jade": "^1.11.0",
-    "lodash": "^3.9.3"
+    "lodash": "^3.9.3",
+    "open": "0.0.5"
   }
 }
