--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: node_js
 before_install: npm install -g grunt-cli
-install: npm install
-script: grunt build
+install:
+- bundle
+- npm install -g bower grunt-cli
+- npm install
+- bower install
+- ./node_modules/protractor/bin/webdriver-manager update
+beforescript:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+- nohup bash -c "./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager start 2>&1 &"
+script:
+- grunt build
+- grunt verify:firefox
