--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 - npm install
 - bower install
 - ./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update
-beforescript:
+before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - nohup bash -c "./node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager start 2>&1 &"
