Fixed failing spec (removed date check as it works differently on different systems, needs more investigation)

--- a/config/grunt.config.json
+++ b/config/grunt.config.json
@@ -86,7 +86,8 @@
         "specs": ["build/test/specs/**/*Spec.js"],
         "seleniumAddress": "http://localhost:4444/wd/hub",
         "framework": "jasmine2",
-        "browser": "firefox"
+        "browser": "firefox",
+        "verbose": true
       }
     },
     "default": {
