--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lm-webforms",
   "version": "0.0.1",
-  "description": "Web forms for AngularJS",
+  "description": "Web forms for AngularJS based on Angular.Material",
   "main": "release/lm-webforms.js",
   "homepage": "https://github.com/olegccc/lm-webforms",
   "repository": {
@@ -16,8 +16,9 @@
   },
   "keywords": [
     "angularjs",
-    "tree",
-    "router"
+    "forms",
+    "controls",
+    "material"
   ],
   "author": "olegccc",
   "license": "MPL-2.0",
