--- a/bower.json
+++ b/bower.json
@@ -27,20 +27,18 @@
     ".baseDir.ts"
   ],
   "dependencies": {
-    "requirejs": "~2.1.18",
-    "requirejs-text": "~2.0.14",
     "angularjs": "~1.4.1",
-    "codemirror": "~5.4.0",
-    "ckeditor": "~4.4.7",
-    "jquery": "~2.1.4",
-    "Autolinker.js": "~0.18.1",
-    "domready": "~1.0.8",
     "angular-translate": "~2.7.2",
     "angular-messages": "~1.4.1",
     "angular-material": "~0.10.0",
     "angular-touch": "~1.4.1",
-    "angular": "~1.4.1",
-    "almond": "~0.3.1"
+    "angular": "~1.4.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "Autolinker.js": "~0.18.1",
+    "domready": "~1.0.8",
+    "codemirror": "~5.4.0",
+    "ckeditor": "~4.4.7",
+    "requirejs": "~2.1.18"
+  }
 }
